--- a/futureai-hub/templates/404.html
+++ b/futureai-hub/templates/404.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
+
 {% block title %}Page Not Found - FutureAI Hub{% endblock %}
 
 {% block content %}
-<div class="text-center mt-5">
-  <h1 class="display-4">404</h1>
-  <p class="lead">Sorry, the page you are looking for does not exist.</p>
-  <a href="{{ url_for('home') }}" class="btn btn-primary">Back to Home</a>
-</div>
+  <h2>404 - Page Not Found</h2>
+  <p>Sorry, the page you were looking for does not exist.</p>
+  <p><a href="{{ url_for('home') }}">← Back to Home</a></p>
 {% endblock %}
