--- a/futureai-hub/templates/post.html
+++ b/futureai-hub/templates/post.html
@@ -27,7 +27,7 @@
     </blockquote>
   {% endif %}
 
-  <section class="article-body" style="white-space: pre-line;">
+  <section class="article-body">
     {{ post.body | safe }}
   </section>
 
