--- a/futureai-hub/templates/home.html
+++ b/futureai-hub/templates/home.html
@@ -39,4 +39,7 @@
     </div>
   {% endif %}
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8619211451141951"
+     crossorigin="anonymous"></script>
 {% endblock %}
+
