--- a/futureai-hub/templates/search.html
+++ b/futureai-hub/templates/search.html
@@ -23,5 +23,8 @@
     <div class="alert alert-info" role="alert">
       No articles matched your search query.
     </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8619211451141951"
+     crossorigin="anonymous"></script>
   {% endif %}
 {% endblock %}
+
